welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: ';' expected but ')' found.
    else if ((nums(i)==6 && cumule==true)) || (nums(i)==7 && cumule==true)){nbRepet+=1}
                                                                          ^